--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.3",
     "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.35.2"
   }
